add new updates

--- a/src/components/Project.astro
+++ b/src/components/Project.astro
@@ -13,7 +13,7 @@ export interface Props {
 const { project } = Astro.props;
 ---
 
-<div class="relative bg-gray-900 rounded-lg shadow-lg mainDiv">
+<div class="relative bg-gray-900 rounded-lg shadow-lg mainDiv max-h-[400px]">
     <div class="h-6 bg-gray-700 rounded-t-lg flex items-center justify-between">
         <div class="flex items-center">
             <div class="w-3 h-3 rounded-full bg-red-500 ml-2"></div>
@@ -23,7 +23,7 @@ const { project } = Astro.props;
         <div class="text-white font-mono mr-10">{project.name}</div>
         <div></div>
     </div>
-    <img src={project.imgUrl} alt={project.name} />
+    <img src={project.imgUrl} alt={project.name} class="object-cover max-h-[350px] w-full overflow-hidden" />
     <div
         class="absolute inset-0 bg-black bg-opacity-70 opacity-0 invisible transition-opacity duration-300"
     >
