--- a/src/pages/experiences.astro
+++ b/src/pages/experiences.astro
@@ -144,6 +144,23 @@ let exp = [
     span: "Jun 2023 - Sept 2023",
     skills: ["React.js", "Angular", "TypeScript", "Node.js", "C"],
   },
+  {
+    id: 10,
+    title: "Open source contributor",
+    company: '<a href="https://embedchain.ai" target="_blank">Embedchain</a>',
+    description:
+      "At Embedchain, I worked with the core team in improving developer experience as well as customer experience. I added several data loaders like Image, Directory, Discord, Substack etc. that expanded our package to be consumed for a lot of unstructured content. Built the entire deployment pipeline (ec commands) allowing RAG apps to get deployed at scale using any platform (modal.com, render.com, streamlit, gradio etc). I also drove the embedchain integrations with chainlit and streamlit. I also added function calling support for OpenAI LLM and YAML schema validation. I built and published their official docker images which has got over 100+ pulls. Apart from these, I added support for some LLMs and improved their tests from 48% coverage to 77%.",
+    span: "Oct 2023 - Dec 2023",
+    skills: ["Python", "LLMs", "Docker", "CI/CD", "RAG"],
+  },
+  {
+    id: 6,
+    title: "Software Engineer Intern",
+    company: '<a href="https://builder.io/" target="_blank">Builder.io</a>',
+    description: "Working on various complex projects of Builder.io",
+    span: "Nov 2023 - present",
+    skills: ["React.js", "Qwik", "TypeScript", "Node.js", "Mitosis"],
+  },
 ].reverse();
 ---
 
