--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -4,10 +4,24 @@ import Hero from "../components/Hero.astro";
 import Dino from "../components/Dino.astro";
 
 const lifeUpdates = {
+    "2024": [
+        {
+            id: 2,
+            title: "Google Summer of Code mentor 2024 with Rocket.Chat"
+        }
+    ],
     "2023": [
+        {
+            id: 9,
+            title: "Got selected for an internship at my dream company - Builder.io",
+        },
         {
             id: 1,
             title: "Linux Foundation Mentorship Program 2023 (summer) with The Open Mainframe Project.",
+        },
+        {
+            id: 5,
+            title: "Contributed to Embedchain - an Open Source RAG framework (Oct-Dec)",
         },
         {
             id: 2,
