--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -131,10 +131,9 @@
             alt="Sidharth Mohanty"
             class="rounded-full w-32 h-32 md:w-48 md:h-48 shadow-md"
         />
-        <p class="mt-2">
-            LFX'2023 @ TheOpenMFProject | GSoC'2023 mentor & GSoC'2022 @
-            Rocket.Chat | React.js SME @ Relevel (by Unacademy) | Ex-Intern @
-            Memorang, DragonfruitAI
+        <p class="mt-2 font-mono">
+            Software Engineer @ Builder.io | LFX'2023 @ TheOpenMFProject | GSoC'2023 mentor & GSoC'2022 @
+            Rocket.Chat
         </p>
     </div>
 </section>
